--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -14,7 +14,7 @@
 * in flow control, loops, and collections. By mastering these concepts, developers will be able to write more
 * efficient and effective code in their Salesforce projects.
 *
-* @author Your Name
+* @author Satya Buddharaju Venkata
 */
 
 public with sharing class FlowControlLoopsCollections {
@@ -29,6 +29,10 @@ public with sharing class FlowControlLoopsCollections {
      * @return "Hello World!" if x greater than y, otherwise return null.
      */
     public static String helloWorld(Integer x, Integer y) {
+        if(x != null && y != null && x > y)
+        {
+            return 'Hello World!';
+        }
         return null; // Replace null with the variable you used to store the result
     }
 
@@ -42,7 +46,11 @@ public with sharing class FlowControlLoopsCollections {
      * @return true if the person is eligible to vote, false otherwise.
      */
     public static Boolean votingEligibility(Integer age) {
-        return null; // Replace null with the variable you used to store the result
+        Boolean isEligible = false;
+        if(age != null && age >= 18){
+            isEligible = true;
+        }
+        return isEligible; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -55,10 +63,19 @@ public with sharing class FlowControlLoopsCollections {
      * @return The maximum of the two numbers, or null if either number is null.
      */
     public static Integer findMax(Integer num1, Integer num2) {
+        /*
+		https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_math.htm
+		max(decimalValue1, decimalValue2) -> Returns the larger of the two specified Decimals.
+		max(doubleValue1, doubleValue2) -> Returns the larger of the two specified Doubles.
+		max(integerValue1, integerValue2) -> Returns the larger of the two specified Integers.
+		max(longValue1, longValue2) -> Returns the larger of the two specified Longs.
+		*/
         // Initialize largestNum as null
         Integer largestNum = null;
-
-        return null; // Replace null with the variable you used to store the result
+        if(num1 != null && num2 != null){
+            largestNum = Math.max(num1, num2);
+        }
+        return largestNum; // Replace null with the variable you used to store the result
     }
 
 
@@ -71,7 +88,15 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Positive", "Negative", or "Zero", or null if the number is null.
      */
     public static String checkNumber(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        if(a == null){
+          return null;  
+        }else if(a > 0){
+            return 'Positive';
+        }else if (a < 0){
+            return 'Negative';
+        }else{
+            return 'Zero';
+        }    
     }
 
     /**
@@ -83,9 +108,20 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Even" or "Odd", or null if the number is null.
      */
     public static String checkEvenOdd(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        /*
+		https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_math.htm#apex_System_Math_mod
+		mod(integerValue1, integerValue2) -> Returns the remainder of integerValue1 divided by integerValue2.
+		mod(longValue1, longValue2)-> Returns the remainder of longValue1 divided by longValue2.
+		*/
+        if(a == null){
+          return null;  // Replace null with the variable you used to store the result
+        } else if(Math.mod(a, 2) == 0){
+           return 'Even'; 
+        }else {
+            return 'Odd';
+        }
+         
     }
-
     /**
      * Question 6
      * Checks if a string is empty, null, or contains text.
@@ -93,9 +129,22 @@ public with sharing class FlowControlLoopsCollections {
      * @param a The string to check.
      * @return A string indicating whether the input is "Empty", "Null", or "Contains Text".
      */
-    public static String checkString(String a) {
-        return null; // Replace null with the variable you used to store the result
-    }
+     public static String checkString(String a) {
+     	/*
+		https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_string.htm
+		isBlank(inputString) -> Returns true if the specified String is white space, empty (''), or null; otherwise, returns false.
+		isEmpty(inputString)-> Returns true if the specified String is empty ('') or null; otherwise, returns false.
+		isNotBlank(inputString) -> Returns true if the specified String is not whitespace, not empty (''), and not null; otherwise, returns false.
+		isNotEmpty(inputString) -> Returns true if the specified String is not empty ('') and not null; otherwise, returns false.
+		*/
+         if(a == null){
+             return 'Null'; 
+         }else if(String.isNotBlank(a)){
+             return 'Contains Text';
+         }else{
+            return 'Empty'; 
+         }
+     }
 
     /**
      * Question 7
@@ -110,7 +159,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return The grade for the given score.
      */
     public static String determineGrade(Integer score) {
-        return null; // Replace null with the variable you used to store the result
+        if(score >= 90){
+            return 'A';
+        }else if(score >= 80 && score <=90){
+            return 'B';
+        }else if(score >= 70 && score <=80){
+            return 'C';
+        }else if(score >= 60 && score <=70){
+            return 'D';
+        }else{
+            return 'F';
+        }
     }
 
 
@@ -122,13 +181,11 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of all integers up to the limit.
      */
     public static Integer sumUpToLimit(Integer intLimit) {
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        Integer sum =0; 
+        for (Integer i = 1; i< = intLimit; i++){
+        	sum += i;    
+        }
+        return sum; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -139,15 +196,12 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static String returnHelloWorld() {
         // Initialize the result String
-
+		String resultString ='';
         // Use a for loop to append 'Hello World!;' to the result string three times
-        /* 
-         for (){
-            
+         for (Integer i = 0; i < 3; i++){
+            resultString += 'Hello World!; ';
          }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        return resultString; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -162,17 +216,17 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static String repeatString(String inputString, Integer repeatCount) {
         // Initialize the result String
-
+		String resultString ='';
         // Use a for loop to append the inputString to the result string repeatCount times
-        /*
-        for () {
-
-            // If it is not the last iteration, add a semicolon to separate the strings
+        for (Integer i =0 ; i < repeatCount; i ++) {
+               resultString +=  inputString;
+            if(i < repeatCount - 1){
+                resultString += '; ';
+            }
         }
-        */
-
+        System.debug(resultString);
         // Return the final result string
-        return null; // Replace null with the variable you used to store the result
+        return resultString; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -182,16 +236,29 @@ public with sharing class FlowControlLoopsCollections {
      * @return A List of integers containing the numbers 1, 2, and 3.
      */
     public static List<Integer> createAndPopulateList() {
+        /* 
+        https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_list.htm#apex_System_List_add
+        add(listElement) -> Adds elements to the end of the list
+        add(index, listElement) ->Inserts and element at the specified index.
+        addAll(fromList) -> Adds all of the elements in the specified list to the list that calls the method. Both lists must be of the same type.
+        addAll(fromSet) -> Add all of the elements in specified set to the list that calls the method. The set and the list must be of the same type.
+        */ 
         // Create a new list of integers
-
+        List<Integer> intList = new List<Integer>();
         // Add the integers 1, 2, and 3 to the list
         // add 1
+        intList.add(1); 
         // add 2
+        intList.add(2);
         // add 3
-
+        intList.add(3);
         // Return the populated list
-        return null; // Replace null with the variable you used to store the result
-    }
+        //Ideally we should check list is empty or not but in this case we are certain that List has values hence not checking
+        return intList; // Replace null with the variable you used to store the result
+
+        //Alternative Way to create List
+        // List<Integer> intList = new List<Integer>{1,2,3};
+      }
 
     /**
      * Question 12
@@ -200,13 +267,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return A List of integers from 1 to 5, excluding the number 3.
      */
     public static List<Integer> createAndRemoveFromList() {
+        /* 
+        https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_list.htm#apex_System_List_add
+        remove(index) -> Removes the list element stored at the specified index, returning the element that was removed.
+        */ 
         // Create a new list of integers and add numbers 1 to 5
         List<Integer> numberList = new List<Integer>{1, 2, 3, 4, 5}; //DO NOT CHANGE
 
         // Remove the 3rd element (number 3) from the list
-        
+        numberList.remove(2); // Index starts with 0
         // Return the updated list
-        return null; // Replace null with the variable you used to store the result
+        return numberList; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -217,15 +288,20 @@ public with sharing class FlowControlLoopsCollections {
      * @return A List of integers from 1 to 'n'.
      */
     public static List<Integer> createIntegerList(Integer n) {
-        // Create a new list of integers 
-
-        /*
-        for() {
-            //add integer to the list
-        }
+        /* 
+        https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_list.htm#apex_System_List_add
+            isEmpty() -> Returns true if the list has zero elements.
+            size() -> Returns the number of elements in the list.
         */ 
-
-        return null; // Replace null with the variable you used to store the result
+        // Create a new list of integers 
+        List<Integer> integerList = new List<Integer>();
+        for(Integer i = 1; i <= n; i++) {
+            //add integer to the list
+            integerList.add(i);
+            System.debug(integerList);
+        }
+        //Either we can use isEmpty() or size() to check if the list has elements
+            return integerList; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -237,12 +313,21 @@ public with sharing class FlowControlLoopsCollections {
      * @return A Set of unique strings.
      */
     public static Set<String> createStringSet(List<String> inputList) {
+        /* 
+        https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_set.htm?q=set
+            add(setElement) -> Adds an element to the set if it is not already present.
+            addAll(fromList) -> Adds all of the elements in the specified list to the set if they are not already present.
+            addAll(fromSet) -> Adds all of the elements in the specified set to the set that calls the method if they are not already present.
+            
+            isEmpty() -> Returns true if the set has zero elements.
+            size() -> Returns the number of elements in the set (its cardinality).
+        */ 
         // Create a new Set of strings
         Set<String> stringSet = new Set<String>();
 
         //add strings to the set
-
-        return null; // Replace null with the variable you used to store the result
+		stringSet.addAll(inputList);
+        return stringSet; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -252,13 +337,21 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of positive integers from the list.
      */
     public static Integer sumPositiveIntegers() {
+        /* 
+        https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_set.htm?q=set
+            get(indexReturns the list element stored at the specified index.
+        */ 
         List<Integer> numbers = new List<Integer>{-1, 2, -3, 4, -5, 6}; //DO NOT CHANGE
-
-        // Loop through the list of integers
-            // if the number is negative skip this iteration
-        
-
-        return null; // Replace null with the variable you used to store the result
+            Integer sum = 0; 
+            // Loop through the list of integers
+            for(Integer i = 0; i < numbers.size(); i++){
+                if(numbers.get(i) < 0){
+                	continue;
+                } else{
+                     sum += numbers.get(i);
+                }
+            }
+        return sum; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -271,11 +364,16 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer findWordInList(String wordToFind, List<String> words) {
         // The variable to store the index of the word
-
+		Integer index = -1;
         // Loop through the list of words
-            // If the current word is the word to find, exit the loop
-
-        return null; // Replace null with the variable you used to store the result
+        for(Integer i = 0; i < words.size();  i++){
+           // If the current word is the word to find, exit the loop 
+            if(words.get(i) == wordToFind){
+            	index = i;
+                break;
+        	}
+        }
+        return index; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -288,8 +386,14 @@ public with sharing class FlowControlLoopsCollections {
     public static Decimal countMoney() {
         // The list of money in the wallet, represented in dollars and cents
         List<Decimal> moneyInWallet = new List<Decimal>{0.50, 10, 3.84, 24.60, 9.08, 50, 4.90}; //DO NOT CHANGE
-
-        return null; // Replace null with the variable you used to store the result
+            Decimal sum = 0;
+            for(Integer i = 0; i <  moneyInWallet.size(); i++){
+            	sum += moneyInWallet[i];
+                if(sum > 40){
+                    break;
+                }
+            }
+        return sum; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -299,18 +403,31 @@ public with sharing class FlowControlLoopsCollections {
      * @return The Map of fruits and their quantities.
      */
     public static Map<String, Integer> addItemsToMap() {
+         /*
+		put(key, value) -> Associates the specified value with the specified key in the map.
+		putAll(fromMap) -> Copies all of the mappings from the specified map to the original map.
+		putAll(sObjectArray) -> Adds the list of sObject records to a map declared 
+								as Map<ID, sObject> or Map<String, sObject>.
+		
+		size() -> Returns the number of key-value pairs in the map.
+		isEmpty() -> Returns true if the map has zero key-value pairs.
+		*/
         // Initialize an empty Map
-
+		Map<String, Integer> fruitsMap = new Map<String, Integer>();
         // Add key-value pairs to the Map
         // add Apples => 5
+        fruitsMap.put('Apples', 5);
         // add Oranges => 10
+        fruitsMap.put('Oranges', 10);
         // add Bananas => 15
+        fruitsMap.put('Bananas', 15);
         // add Pears => 20
+        fruitsMap.put('Pears', 20);
         // add Grapes => 25
-
-        return null; // Replace null with the variable you used to store the result
+        fruitsMap.put('Grapes', 25);
+        
+        return fruitsMap; // Replace null with the variable you used to store the result 
     }
-
     /**
      * Question 19
      * Create a map where the keys are the names of employees and the values are their salaries.
@@ -321,18 +438,25 @@ public with sharing class FlowControlLoopsCollections {
      * @return The salary of the employee, or null if the employee is not found in the Map.
      */
     public static Integer getSalary(String employeeName) {
+         /*
+		get(key) -> Returns the value to which the specified key is mapped, or null if the map contains no value for this key.
+		*/
         // Initialize a Map
-
+		Map<String, Integer> salaryMap = new Map<String, Integer>();
         // Add key-value pairs to the Map
         // add John Doe => 50000
+        salaryMap.put('John Doe', 50000);
         // add Jane Smith => 60000
+        salaryMap.put('Jane Smith', 60000);
         // add Sam Brown => 55000
+        salaryMap.put('Sam Brown', 55000);
         // add Alice Johnson => 65000
-
+		salaryMap.put('Alice Johnson', 65000);
+        
         // Get the salary of the employee
-
+		Integer employeeSalary = salaryMap.get(employeeName);
         // Return the salary of the employee, or null if the employee is not found in the Map
-        return null; // Replace null with the variable you used to store the result
+        return employeeSalary; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -346,23 +470,34 @@ public with sharing class FlowControlLoopsCollections {
      * @return A list of employee names who have a salary more than 55000.
      */
     public static List<String> getHighPaidEmployees() {
+        
         // Initialize a Map
         Map<String, Integer> employeeSalaries = new Map<String, Integer>();
 
         // Add key-value pairs to the Map
         // add John Doe => 50000
+        employeeSalaries.put('John Doe', 50000);
         // add Jane Smith => 60000
+        employeeSalaries.put('Jane Smith', 60000);
         // add Sam Brown => 55000
+        employeeSalaries.put('Sam Brown', 55000);
         // add Alice Johnson => 65000
-
+		employeeSalaries.put('Alice Johnson', 65000);
+        
         // Initialize a list to store the names of high paid employees
-
+		List<String> higestPaidEmpList = new List<String>();
+        
         // Iterate over the Map using a for loop
+        for(String employeeName : employeeSalaries.keySet()){ // employeeSalaries.keySet() -> to get all keys
+            Integer salary = employeeSalaries.get(employeeName); // employeeSalaries.get(employeeName) -> to get value of a key
             // Check if the salary of the employee is more than 55000
-                // Add the employee to the list of high paid employees
-
+            if(salary > 55000){
+            	// Add the employee to the list of high paid employees  
+            	higestPaidEmpList.add(employeeName); 
+            }    
+        }               
         // Return the list of high paid employees
-        return null; // Replace null with the variable you used to store the result
-    }
+        return higestPaidEmpList; // Replace null with the variable you used to store the result
 
+	}
 }
